--- a/MC ML knit2.Rmd
+++ b/MC ML knit2.Rmd
@@ -1,46 +1,21 @@
 ---
-title: "ML to knit"
+title: "MC ML knit 2"
 author: "Andreas Methling"
 date: "30/11/2021"
 output: pdf_document
 ---
-```{r, message=FALSE}
-library(tidyverse)
-library(lubridate)
-library(magrittr)
-library(FactoMineR)
-library(factoextra)
-library(uwot)
-library(GGally)
-library(rsample)
-library(ggridges)
-library(xgboost)
-library(recipes)
-library(parsnip)
-library(glmnet)
-library(tidymodels)
-library(skimr)
-library(VIM)
-library(visdat)
-library(ggmap)
-library(ranger)
-library(vip)
-library(SnowballC)
-library(tokenizers)
-library(formatR)
-
-```
-
-
-# Data
 
 ```{r}
 library(readr)
+library(tidyverse)
+
+
 data_start <- read_csv("C:/Users/andre/Desktop/lyrics-data.csv")
 artists_data <- read_csv("C:/Users/andre/Downloads/artists-data.csv")
+
 ```
 
-**Artist data**
+
 ```{r}
 artists = artists_data %>% 
   group_by(Artist) %>% 
@@ -49,39 +24,14 @@ artists = artists_data %>%
   replace_na(list(Pop = 0, "Hip Hop" = 0, Rock = 0, "Funk Carioca" = 0, "Sertanejo" = 0, Samba = 0 )) %>% 
   ungroup() %>% 
   left_join(artists_data, by = c("Artist")) %>% 
-  select(-c(Genre, Genres, Popularity, Songs)) %>% 
+  select(-c(Genre, Genres, Popularity)) %>% 
   distinct()
 ```
 
-**Data Rock or Pop**
-```{r}
-data_genre = data_start %>% 
-  filter(Idiom == "ENGLISH") %>% 
-  rename("Link" = "ALink") %>% 
-  inner_join(artists, by = c("Link")) %>% 
-  distinct() %>%
-  mutate(name = paste(Artist, SName))%>%
-  rename(text=Lyric) %>%
-  filter(Pop==1 | Rock==1) %>%
-  select(name, text, Pop, Rock) %>%
-  distinct(name, .keep_all = T)
-
-
-
-data_pop_rock=data_genre %>%
-  mutate(genre = ifelse(Pop==1 & Rock == 1, "pop/rock", ifelse(Rock==1 & Pop==0, "Rock", ifelse(Rock == 0 & Pop == 1, "Pop", 0)))) %>%
-  select(-c(Pop, Rock))
-
-data_pop_rock_labels= data_pop_rock %>%
-  select(name, genre)
-```
-
-
-
-
-**Data Rock and Pop**
 
 ```{r}
+glimpse(data_start)
+
 data = data_start %>% 
   filter(Idiom == "ENGLISH") %>% 
   rename("Link" = "ALink") %>% 
@@ -89,119 +39,24 @@ data = data_start %>%
   distinct() %>%
   mutate(name = paste(Artist, SName))%>%
   rename(text=Lyric) %>%
-  filter(Rock==1 & Pop==1) %>%
+  filter(Rock==1, Pop==1) %>%
   select(name, text)%>%
   distinct(name, .keep_all = T)
+
+
+data %>%
+  count(name, sort = T)
+
 ```
 
 
 
+# Make labels 
 
-# Preprocessing / EDA
-
-First we tokenize the data. 
 ```{r}
 library(tidytext)
-text_genre_tidy = data_pop_rock %>% unnest_tokens(word, text, token = "words")
-
-head(text_genre_tidy)
-```
-
-We remove short words and stopwords.
-```{r}
-text_genre_tidy %<>%
-  filter(str_length(word) > 2 ) %>% 
-  group_by(word) %>%
-  ungroup() %>%
-  anti_join(stop_words, by = 'word') 
-```
-
-We use the hunspell package, which seems to produce the best stemming for our data. Reducing a word to its “root” word. 
-```{r}
-library(hunspell)
-text_genre_tidy %>%
-  mutate(stem = hunspell_stem(word)) %>%
-  unnest(stem) %>%
-  count(stem, sort = TRUE)
-
-text_genre_tidy %<>% 
-  mutate(stem = hunspell_stem(word)) %>%
-  unnest(stem) %>%
-  select(-word) %>%
-  rename(word = stem)
-
-```
-
-We weight the data using tf-idf (Term-frequency Inverse document frequency). 
-```{r}
-# TFIDF weights
-text_tf_idf= text_genre_tidy %>%
-group_by(name) %>%
-  count(word, sort = TRUE) %>%
-  ungroup() %>% 
-  bind_tf_idf(word, name, n) %>%
-  arrange(desc(tf_idf))
-
-
-text_genre_tf_idf = text_tf_idf %>%
-  left_join(data_pop_rock_labels)
-
-
-
-
-```
-
-We show the 25 most common words. 
-```{r}
-# TFIDF topwords
-text_genre_tidy_rock= text_genre_tf_idf %>%
-  filter(genre == "Rock")%>%
-count(word, wt = tf_idf, sort = TRUE) %>% #remove
-head(25)
-
-
-text_genre_tidy_rock_pop= text_genre_tf_idf %>%
-  filter(genre == "pop/rock")%>%
-count(word, wt = tf_idf, sort = TRUE) %>% #remove
-head(25)
-
-text_genre_tidy_pop= text_genre_tf_idf %>%
-  filter(genre == "Pop")%>%
-count(word, wt = tf_idf, sort = TRUE) %>% #remove
-head(25)
-
-```
-
-```{r}
-labels_words <- text_genre_tf_idf %>%
-group_by(genre) %>%
-count(word, wt = tf_idf, sort = TRUE, name = "tf_idf") %>%
-dplyr::slice(1:20) %>% #slice
-ungroup()
-
-```
-
-```{r}
-labels_words %>%
-mutate(word = reorder_within(word, by = tf_idf, within = genre)) %>% #Pop & Rock
-ggplot(aes(x = word, y = tf_idf, fill = genre)) +
-geom_col(show.legend = FALSE) +
-labs(x = NULL, y = "tf-idf") +
-facet_wrap(~genre, ncol = 2, scales = "free") +
-coord_flip() +
-scale_x_reordered() +
-theme(axis.text.y = element_text(size = 6))
-
-```
-
-
-# Machine learning model
-
-
-## Making labels
-
-```{r}
 text_tidy = data %>% unnest_tokens(word, text, token = "words")
+
 head(text_tidy)
 ```
 
@@ -213,13 +68,22 @@ text_tidy %<>%
   anti_join(stop_words, by = 'word') 
 ```
 
-We use stemming 
 ```{r}
+library(hunspell)
+text_tidy %>%
+  mutate(stem = hunspell_stem(word)) %>%
+  unnest(stem) %>%
+  count(stem, sort = TRUE)
+
+
 text_tidy %<>% 
   mutate(stem = hunspell_stem(word)) %>%
   unnest(stem) %>%
    select(-word) %>%
   rename(word = stem)
+
+
+
 ```
 
 ```{r}
@@ -227,122 +91,113 @@ top_10000_words=text_tidy %>%
   count(word,sort = T) %>%
   head(10000) %>%
   select(word)
+
 data_top_10000=top_10000_words %>%
   left_join(text_tidy, by= c("word")) 
+
 ```
 
-# Bing
-```{r}
-sentiment_bing= data_top_10000 %>%
-  inner_join(get_sentiments("bing")) %>%
-  mutate(sentiment= ifelse(sentiment == "positive", 1,0)) 
-sentiment_bing %<>%
-  group_by(name) %>%
-  summarise(mean= mean(sentiment))%>%
-  mutate(label= ifelse(mean>=0.5, 1,0))
-```
-
-# Afinn
+# nrc multiclass
 
 ```{r}
-sentiment_afinn= data_top_10000 %>%
-  inner_join(get_sentiments("afinn")) 
-sentiment_afinn %<>%
-  group_by(name) %>%
-  summarise(mean= mean(value))%>%
-  mutate(label= ifelse(mean>=0, 1,0))
-```
+library(magrittr)
 
-# Data
+sentiment_nrc <- text_tidy %>%  
+  inner_join(get_sentiments("nrc"))
 
-```{r}
-data_bing= sentiment_bing %>%
-  inner_join(data)%>%
-  select(text, label, name)
-  
-data_afinn= sentiment_afinn %>%
-  inner_join(data)%>%
-  select(text, label, name)
-```
+multi_data=sentiment_nrc %>%
+  filter(sentiment %in% c("negative", "positive", "joy", "fear")) %>%
+  count(name, sentiment) %>%
+  pivot_wider(names_from = sentiment, values_from = n, values_fill = 0) %>%
+  mutate(label= pmax(positive, joy, negative, fear)) %>%
+  mutate(label= ifelse(label == fear, "fear", ifelse(label == positive, "positive", ifelse(label == negative, "negative", ifelse(label == joy, "joy","none label")))))  %>%
+  select(name, label) %>%
+  inner_join(data)
 
 
-We now want to create a binary supervised machinelearning model to predict the sentiment of a song based on its lyrics.
+multi_data_new=sentiment_nrc %>%
+  filter(sentiment %in% c("trust", "sadness", "joy", "fear")) %>%
+  count(name, sentiment) %>%
+  pivot_wider(names_from = sentiment, values_from = n, values_fill = 0) %>%
+  mutate(label= pmax(trust, joy, sadness, fear)) %>%
+  mutate(label= ifelse(label == fear, "fear", ifelse(label == trust, "trust", ifelse(label == sadness, "sadness", ifelse(label == joy, "joy","none label")))))  %>%
+  select(name, label) %>%
+  rename(y= label)%>%
+  inner_join(data)
 
+multi_data_new %>%
+  count(y)
 
-First we look for missing values. 
-```{r}
-library(visdat)
-vis_dat(data_bing)
-```
-
-We remove NA's and look at the distribution between the two classes.
-```{r}
-data_bing %<>%
-  drop_na() %>%
-  rename(y = label) %>%
+multi_data_new %<>%
   select(-name)
-data_bing$y <- as.factor(data_bing$y)
-data_bing %>% 
-  count(y) %>% 
-  ggplot(aes(x = y, y = n)) + 
-  geom_col()
-```
-We can see that negative sentiment is much more represented than positive sentiment, so we have to do some down or upsampling. 
 
-We will create three different receipes: one using embedding, one using tf-idf and one using Hash.
 
-So we load the embeddings using the "textdata" package.
-
-```{r}
-library(textdata)
-glove6b <- embedding_glove6b(dimensions = 100)
+multi_data %>%
+  count(label)
 ```
 
 
-
-We create a training and test dataset using strata=y to get the same ratio between the classes in both the training and test dataset.  
 
 ```{r}
 library(rsample)
-set.seed(19)
-tidy_split <- initial_split(data_bing, strata = y)
-train_data <- training(tidy_split)
-test_data <- testing(tidy_split)
+
+split= initial_split(multi_data_new, prop = 0.75)
+
+train_data= training(split)
+test_data= testing(split)
 ```
-We use downsampling only on the training data to better fit the model 
+
+
 
 ```{r}
-train_data <- recipe(y~., data = train_data) %>%
+library(recipes)
+train_data <- recipe(y~., data = train_data) %>% 
   themis::step_downsample(y) %>% 
   prep() %>% 
   juice()
+
+
 train_data %>%
   count(y)
 ```
 And can now see that the classes are evenly distributed. 
 
+```{r}
+library(textdata)
+
+glove6b <- embedding_glove6b(dimensions = 100)
+```
+
 
 We create the three recipies we want to use. 
 ```{r}
+
 library(textrecipes)
+
+
 tf_idf_rec <- recipe(y~., data = train_data) %>% 
   step_tokenize(text) %>% 
   step_stem(text) %>% 
   step_stopwords(text) %>% 
   step_tokenfilter(text, max_tokens = 1000) %>% 
-  step_tfidf(all_predictors())
+  step_tfidf(all_predictors()) 
+
+
 embeddings_rec <- recipe(y~., data = train_data) %>% 
   step_tokenize(text) %>% 
   step_stem(text) %>% 
   step_stopwords(text) %>% 
   step_tokenfilter(text, max_tokens = 1000) %>% 
   step_word_embeddings(text, embeddings = embedding_glove6b())
+
+
 hash_rec <- recipe(y~., data = train_data) %>% 
   step_tokenize(text) %>% 
   step_stem(text) %>% 
   step_stopwords(text) %>% 
   step_tokenfilter(text, max_tokens = 1000) %>% 
   step_texthash(text, num_terms = 100) 
+
 ```
 
 
@@ -350,18 +205,21 @@ hash_rec <- recipe(y~., data = train_data) %>%
 
 We define three models:
 
+All models are coded to do multiclass predcitions. 
 We set some of the parameters for tuning. 
 
 ### Logistic model
 
 ```{r}
-#model_lg <- logistic_reg(mode = 'classification', penalty = tune(), mixture = 0.5) %>%
-  #set_engine('glm', family = binomial) 
-model_lg <- logistic_reg(mode = 'classification') %>%
-  set_engine('glm', family = binomial)
+library(tidymodels)
+
+model_lg <- multinom_reg(penalty = tune(), mixture = 1) %>% 
+  set_engine("glmnet") %>% 
+  set_mode("classification")
 ```
 
 ### KNN model
+
 ```{r}
 model_knn <- nearest_neighbor(neighbors = tune()) %>% 
   set_engine("kknn") %>% 
@@ -372,20 +230,9 @@ model_knn <- nearest_neighbor(neighbors = tune()) %>%
 ### Random Forrest
 ```{r}
 model_rf <- 
-  rand_forest(trees = NULL, mtry = NULL, min_n = NULL) %>% 
+  rand_forest() %>% 
   set_engine("ranger", importance = "impurity") %>% 
   set_mode("classification")
-```
-
-
-### Decision tree
-```{r}
-model_dt <- decision_tree(mode = 'classification',
-                          cost_complexity = tune(),
-                          tree_depth = tune(), 
-                          min_n = tune()
-                          ) %>%
-  set_engine('rpart') 
 ```
 
 ## Workflow 
@@ -397,14 +244,15 @@ We create workflows for each recipe.
 ```{r}
 workflow_general_tf <- workflow() %>%
   add_recipe(tf_idf_rec)
+
 workflow_lg_tf <- workflow_general_tf %>%
   add_model(model_lg)
+
 workflow_knn_tf <- workflow_general_tf %>%
   add_model(model_knn)
+
 workflow_rf_tf <- workflow_general_tf %>%
   add_model(model_rf)
-workflow_dt_tf <- workflow_general_tf %>%
-  add_model(model_dt)
 ```
 
 
@@ -413,14 +261,15 @@ workflow_dt_tf <- workflow_general_tf %>%
 ```{r}
 workflow_general_emb <- workflow() %>%
   add_recipe(embeddings_rec)
+
 workflow_lg_emb <- workflow_general_emb %>%
   add_model(model_lg)
+
 workflow_knn_emb <- workflow_general_emb %>%
   add_model(model_knn)
+
 workflow_rf_emb <- workflow_general_emb %>%
   add_model(model_rf)
-workflow_dt_emb <- workflow_general_emb %>%
-  add_model(model_dt)
 ```
 
 
@@ -429,21 +278,24 @@ workflow_dt_emb <- workflow_general_emb %>%
 ```{r}
 workflow_general_hash <- workflow() %>%
   add_recipe(hash_rec)
+
 workflow_lg_hash <- workflow_general_hash %>%
   add_model(model_lg)
+
 workflow_knn_hash <- workflow_general_hash %>%
   add_model(model_knn)
+
 workflow_rf_hash <- workflow_general_hash %>%
   add_model(model_rf)
-workflow_dt_hash <- workflow_general_hash %>%
-  add_model(model_dt)
 ```
 
-## Hyper tuneing 
+
+## Hyper tuneing
 
 We use vfold_cv to create resampled data. to perfrom hypertuning and fitting. 
 ```{r}
 set.seed(100)
+
 k_folds_data <- train_data %>% 
   vfold_cv(strata = y,
            v = 3,
@@ -454,12 +306,8 @@ k_folds_data <- train_data %>%
 
 We define the grids we want to use for the hypertuning 
 ```{r}
-#logistic_grid <- grid_regular(parameters(model_lg), levels = 3)
-logistic_grid <- 5
-# knn_grid <- grid_regular(parameters(model_knn), levels = 5, filter = c(neighbors > 1))
-knn_grid <- 5
-dt_grid <- 5
-rf_grid <- 5
+logistic_grid <- grid_regular(parameters(model_lg), levels = 3)
+knn_grid <- grid_regular(parameters(model_knn), levels = 5, filter = c(neighbors > 1))
 ```
 The level defines the amount of parameters that should be considered. 
 
@@ -476,8 +324,16 @@ model_metrics <- metric_set(accuracy, sens, spec, mn_log_loss, roc_auc)
 
 We tune the three different models 
 ```{r}
-library(text2vec)
 # Tune hash models
+linear_hash_res <- tune_grid(
+  model_lg,
+  hash_rec,
+  grid = logistic_grid,
+  control = model_control,
+  metrics = model_metrics,
+  resamples = k_folds_data
+)
+
 
 knn_hash_res <- tune_grid(
   model_knn,
@@ -487,29 +343,20 @@ knn_hash_res <- tune_grid(
   metrics = model_metrics,
   resamples = k_folds_data
 )
-
-#rf_hash_res <- tune_grid(
-  #model_rf,
-  #hash_rec,
-  #grid = rf_grid,
-  #control = model_control,
-  #metrics = model_metrics,
-  #resamples = k_folds_data
-#)
-
-dt_hash_res <- tune_grid(
-  model_dt,
-  hash_rec,
-  grid = dt_grid,
-  control = model_control,
-  metrics = model_metrics,
-  resamples = k_folds_data
-)
 ```
 
 
 ```{r}
 # Tune embed models
+linear_embed_res <- tune_grid(
+  model_lg,
+  embeddings_rec,
+  grid = logistic_grid,
+  control = model_control,
+  metrics = model_metrics,
+  resamples = k_folds_data
+)
+
 
 knn_embed_res <- tune_grid(
   model_knn,
@@ -519,27 +366,21 @@ knn_embed_res <- tune_grid(
   metrics = model_metrics,
   resamples = k_folds_data
 )
-#rf_embed_res <- tune_grid(
-  #model_rf,
-  #embeddings_rec,
-  #grid = rf_grid,
-  #control = model_control,
-  #metrics = model_metrics,
-  #resamples = k_folds_data
-#)
-dt_embed_res <- tune_grid(
-  model_dt,
-  embeddings_rec,
-  grid = dt_grid,
-  control = model_control,
-  metrics = model_metrics,
-  resamples = k_folds_data
-)
 ```
 
 
 ```{r}
 # Tune tf-idf models
+linear_tf_res <- tune_grid(
+  model_lg,
+  tf_idf_rec,
+  grid = logistic_grid,
+  control = model_control,
+  metrics = model_metrics,
+  resamples = k_folds_data
+)
+
+
 knn_tf_res <- tune_grid(
   model_knn,
   tf_idf_rec,
@@ -548,22 +389,7 @@ knn_tf_res <- tune_grid(
   metrics = model_metrics,
   resamples = k_folds_data
 )
-#rf_tf_res <- tune_grid(
-  #model_rf,
-  #tf_idf_rec,
-  #grid = rf_grid,
-  #control = model_control,
-  #metrics = model_metrics,
-  #resamples = k_folds_data
-#)
-dt_tf_res <- tune_grid(
-  model_dt,
-  tf_idf_rec,
-  grid = dt_grid,
-  control = model_control,
-  metrics = model_metrics,
-  resamples = k_folds_data
-)
+
 ```
 
 
@@ -571,10 +397,23 @@ dt_tf_res <- tune_grid(
 
 We look at the different optimizations and choose the best parameters. 
 
+#### linear_embed_res
 
+We use autoplot
+
+```{r}
+linear_hash_res %>% autoplot()
+```
+
+```{r}
+best_param_linear_hash_res <- linear_hash_res %>% select_best(metric = 'accuracy')
+best_param_linear_hash_res
+```
 #### knn_embed_res
 
-```{r, tidy=TRUE, tidy.opts=list(width.cutoff=60)}
+We use autoplot
+
+```{r}
 knn_hash_res %>% autoplot()
 ```
 
@@ -583,19 +422,23 @@ best_param_knn_hash_res <- knn_hash_res %>% select_best(metric = 'accuracy')
 best_param_knn_hash_res
 ```
 
-#### decision tree hash
-```{r, tidy=TRUE, tidy.opts=list(width.cutoff=60)}
-dt_hash_res %>% autoplot()
+#### linear_embed_res
+
+We use autoplot
+
+```{r}
+linear_embed_res %>% autoplot()
 ```
 
 ```{r}
-best_param_dt_hash_res <- dt_hash_res %>% select_best(metric = 'accuracy')
-best_param_dt_hash_res
+best_param_linear_embed_res <- linear_embed_res %>% select_best(metric = 'accuracy')
+best_param_linear_embed_res
 ```
-
 #### knn_embed_res
 
-```{r, tidy=TRUE, tidy.opts=list(width.cutoff=60)}
+We use autoplot
+
+```{r}
 knn_embed_res %>% autoplot()
 ```
 
@@ -604,20 +447,24 @@ best_param_knn_embed_res <- knn_embed_res %>% select_best(metric = 'accuracy')
 best_param_knn_embed_res
 ```
 
-#### dt_embed_res
+#### linear_tf_res
 
-```{r, tidy=TRUE, tidy.opts=list(width.cutoff=60)}
-dt_embed_res %>% autoplot()
+We use autoplot
+
+```{r}
+linear_tf_res %>% autoplot()
 ```
 
 ```{r}
-best_param_dt_embed_res <- dt_embed_res %>% select_best(metric = 'accuracy')
-best_param_dt_embed_res
+best_param_linear_tf_res <- linear_tf_res %>% select_best(metric = 'accuracy')
+best_param_linear_tf_res
 ```
 
 #### knn_tf_res
 
-```{r, tidy=TRUE, tidy.opts=list(width.cutoff=60)}
+We use autoplot
+
+```{r}
 knn_tf_res %>% autoplot()
 ```
 
@@ -626,18 +473,6 @@ best_param_knn_tf_res <- knn_tf_res %>% select_best(metric = 'accuracy')
 best_param_knn_tf_res
 ```
 
-#### dt_tf_res
-
-```{r, tidy=TRUE, tidy.opts=list(width.cutoff=60)}
-dt_tf_res %>% autoplot()
-```
-
-```{r}
-best_param_dt_tf_res <- dt_tf_res %>% select_best(metric = 'accuracy')
-best_param_dt_tf_res
-```
-
-
 ## Finalize workflows
 
 We now fit the best parameters into the workflow of the two models that needed hypertuning. 
@@ -645,36 +480,33 @@ We now fit the best parameters into the workflow of the two models that needed h
 ### Hash
 
 ```{r}
+workflow_final_lg_hash <- workflow_lg_hash %>%
+  finalize_workflow(parameters = best_param_linear_hash_res)
+
 workflow_final_knn_hash <- workflow_knn_hash %>%
   finalize_workflow(parameters = best_param_knn_hash_res)
-#workflow_final_rf_hash <- workflow_rf_hash %>%
- # finalize_workflow(parameters = best_param_rf_hash_res)
-workflow_final_dt_hash <- workflow_dt_hash %>%
-  finalize_workflow(parameters = best_param_dt_hash_res)
 ```
 
 
 ### Tf-idf
 
 ```{r}
+workflow_final_lg_tf <- workflow_lg_tf %>%
+  finalize_workflow(parameters = best_param_linear_tf_res)
+
 workflow_final_knn_tf <- workflow_knn_tf %>%
   finalize_workflow(parameters = best_param_knn_tf_res)
-#workflow_final_rf_tf <- workflow_rf_tf %>%
- # finalize_workflow(parameters = best_param_rf_tf_res)
-workflow_final_dt_tf <- workflow_dt_tf %>%
-  finalize_workflow(parameters = best_param_dt_tf_res)
 ```
 
 
 ### Embedings
 
 ```{r}
+workflow_final_lg_emb <- workflow_lg_emb %>%
+  finalize_workflow(parameters = best_param_linear_embed_res)
+
 workflow_final_knn_emb <- workflow_knn_emb %>%
   finalize_workflow(parameters = best_param_knn_embed_res)
-#workflow_final_rf_emb <- workflow_rf_emb %>%
- # finalize_workflow(parameters = best_param_rf_embed_res)
-workflow_final_dt_emb <- workflow_dt_emb %>%
-  finalize_workflow(parameters = best_param_dt_embed_res)
 ```
 
 
@@ -689,8 +521,9 @@ here we us the resampled data to evaluate the models.
 #### hash
 
 ```{r}
+
 log_res_hash <- 
-  workflow_lg_hash %>% 
+  workflow_final_lg_hash %>% 
   fit_resamples(
     resamples = k_folds_data, 
     metrics = metric_set(
@@ -700,14 +533,17 @@ log_res_hash <-
     control = control_resamples(
       save_pred = TRUE)
     ) 
+
 log_res_hash %>% collect_metrics(summarize = TRUE)
+
 ```
 
 #### Tf_idf
 
 ```{r}
+
 log_res_tf <- 
-  workflow_lg_tf %>% 
+  workflow_final_lg_tf %>% 
   fit_resamples(
     resamples = k_folds_data, 
     metrics = metric_set(
@@ -717,13 +553,16 @@ log_res_tf <-
     control = control_resamples(
       save_pred = TRUE)
     ) 
+
 log_res_tf %>% collect_metrics(summarize = TRUE)
+
 ```
 #### Embeding
 
 ```{r}
+
 log_res_emb <- 
-  workflow_lg_emb %>% 
+  workflow_final_lg_emb %>% 
   fit_resamples(
     resamples = k_folds_data, 
     metrics = metric_set(
@@ -733,7 +572,9 @@ log_res_emb <-
     control = control_resamples(
       save_pred = TRUE)
     ) 
+
 log_res_emb %>% collect_metrics(summarize = TRUE)
+
 ```
 
 
@@ -743,6 +584,7 @@ log_res_emb %>% collect_metrics(summarize = TRUE)
 #### Hash
 
 ```{r}
+
 knn_res_hash <- 
   workflow_final_knn_hash %>% 
   fit_resamples(
@@ -754,12 +596,15 @@ knn_res_hash <-
     control = control_resamples(
       save_pred = TRUE)
     ) 
+
 knn_res_hash %>% collect_metrics(summarize = TRUE)
+
 ```
 
 #### TF-idf
 
 ```{r}
+
 knn_res_tf <- 
   workflow_final_knn_tf %>% 
   fit_resamples(
@@ -771,12 +616,15 @@ knn_res_tf <-
     control = control_resamples(
       save_pred = TRUE)
     ) 
+
 knn_res_tf %>% collect_metrics(summarize = TRUE)
+
 ```
 
 #### Embedings
 
 ```{r}
+
 knn_res_emb <- 
   workflow_final_knn_emb %>% 
   fit_resamples(
@@ -788,7 +636,9 @@ knn_res_emb <-
     control = control_resamples(
       save_pred = TRUE)
     ) 
+
 knn_res_emb %>% collect_metrics(summarize = TRUE)
+
 ```
 
 ### Random forest model
@@ -796,6 +646,7 @@ knn_res_emb %>% collect_metrics(summarize = TRUE)
 #### hash
 
 ```{r}
+
 rf_res_hash <- 
   workflow_rf_hash %>% 
   fit_resamples(
@@ -807,12 +658,15 @@ rf_res_hash <-
     control = control_resamples(
       save_pred = TRUE)
     ) 
+
 rf_res_hash %>% collect_metrics(summarize = TRUE)
+
 ```
 
 #### TF-idf
 
 ```{r}
+
 rf_res_tf <- 
   workflow_rf_tf %>% 
   fit_resamples(
@@ -824,12 +678,15 @@ rf_res_tf <-
     control = control_resamples(
       save_pred = TRUE)
     ) 
+
 rf_res_tf %>% collect_metrics(summarize = TRUE)
+
 ```
 
 #### Embedings
 
 ```{r}
+
 rf_res_emb <- 
   workflow_rf_emb %>% 
   fit_resamples(
@@ -841,60 +698,11 @@ rf_res_emb <-
     control = control_resamples(
       save_pred = TRUE)
     ) 
+
 rf_res_emb %>% collect_metrics(summarize = TRUE)
-```
-### Decision tree
 
-
-#### hash
-
-```{r}
-dt_res_hash <- 
-  workflow_final_dt_hash %>% 
-  fit_resamples(
-    resamples = k_folds_data, 
-    metrics = metric_set(
-      recall, precision, f_meas, 
-      accuracy, kap,
-      roc_auc, sens, spec),
-    control = control_resamples(
-      save_pred = TRUE)
-    ) 
-dt_res_hash %>% collect_metrics(summarize = TRUE)
 ```
 
-#### Tf_idf
-
-```{r}
-dt_res_tf <- 
-  workflow_final_dt_tf %>% 
-  fit_resamples(
-    resamples = k_folds_data, 
-    metrics = metric_set(
-      recall, precision, f_meas, 
-      accuracy, kap,
-      roc_auc, sens, spec),
-    control = control_resamples(
-      save_pred = TRUE)
-    ) 
-dt_res_tf %>% collect_metrics(summarize = TRUE)
-```
-#### Embeding
-
-```{r}
-dt_res_emb <- 
-  workflow_final_dt_emb %>% 
-  fit_resamples(
-    resamples = k_folds_data, 
-    metrics = metric_set(
-      recall, precision, f_meas, 
-      accuracy, kap,
-      roc_auc, sens, spec),
-    control = control_resamples(
-      save_pred = TRUE)
-    ) 
-dt_res_emb %>% collect_metrics(summarize = TRUE)
-```
 
 ## Compare performance
 
@@ -905,50 +713,47 @@ log_metrics_tf <-
   log_res_tf %>% 
   collect_metrics(summarise = TRUE) %>%
   mutate(model = "Logistic Regression TF-idf") 
+
 log_metrics_emb <- 
   log_res_emb %>% 
   collect_metrics(summarise = TRUE) %>%
   mutate(model = "Logistic Regression Embeding") 
+
 log_metrics_hash <- 
   log_res_hash %>% 
   collect_metrics(summarise = TRUE) %>%
   mutate(model = "Logistic Regression Hash") 
+
 rf_metrics_tf <- 
   rf_res_tf %>% 
   collect_metrics(summarise = TRUE) %>%
   mutate(model = "Random Forest TF-idf")
+
 rf_metrics_emb <- 
   rf_res_emb %>% 
   collect_metrics(summarise = TRUE) %>%
   mutate(model = "Random Forest Embeding")
+
 rf_metrics_hash <- 
   rf_res_hash %>% 
   collect_metrics(summarise = TRUE) %>%
   mutate(model = "Random Forest Hash")
+
 knn_metrics_tf <- 
   knn_res_tf %>% 
   collect_metrics(summarise = TRUE) %>%
   mutate(model = "Knn TF-idf")
+
 knn_metrics_emb <- 
   knn_res_emb %>% 
   collect_metrics(summarise = TRUE) %>%
   mutate(model = "Knn Embeding")
+
 knn_metrics_hash <- 
   knn_res_hash %>% 
   collect_metrics(summarise = TRUE) %>%
   mutate(model = "Knn Hash")
-dt_metrics_tf <- 
-  dt_res_tf %>% 
-  collect_metrics(summarise = TRUE) %>%
-  mutate(model = "DT TF-idf")
-dt_metrics_emb <- 
-  dt_res_emb %>% 
-  collect_metrics(summarise = TRUE) %>%
-  mutate(model = "DT Embeding")
-dt_metrics_hash <- 
-  dt_res_hash %>% 
-  collect_metrics(summarise = TRUE) %>%
-  mutate(model = "DT Hash")
+
 ```
 
 ```{r}
@@ -961,26 +766,23 @@ model_compare <- bind_rows(
                           rf_metrics_hash,
                           knn_metrics_tf,
                           knn_metrics_emb,
-                          knn_metrics_hash,
-                          dt_metrics_tf,
-                          dt_metrics_emb,
-                          dt_metrics_hash
+                          knn_metrics_hash
                            ) 
+
+
 model_comp <- 
   model_compare %>% 
   select(model, .metric, mean, std_err) %>% 
   pivot_wider(names_from = .metric, values_from = c(mean, std_err)) 
-library(RColorBrewer)
-nb.cols <- 12
-mycolors <- colorRampPalette(brewer.pal(8, "Set2"))(nb.cols)
+
+
 model_comp %>% 
   arrange(mean_f_meas) %>% 
   mutate(model = fct_reorder(model, mean_f_meas)) %>% 
   ggplot(aes(model, mean_f_meas, fill=model)) +
   geom_col() +
   coord_flip() +
-  scale_fill_manual(values = mycolors) +
-  #scale_fill_brewer(palette = "Blues") +
+  scale_fill_brewer(palette = "Blues") +
    geom_text(
      size = 3,
      aes(label = round(mean_f_meas, 2), y = mean_f_meas + 0.08),
@@ -995,8 +797,7 @@ model_comp %>%
   ggplot(aes(model, mean_roc_auc, fill=model)) +
   geom_col() +
   coord_flip() +
-  scale_fill_manual(values = mycolors) +
-  #scale_fill_brewer(palette = "Blues") + 
+  scale_fill_brewer(palette = "Blues") + 
      geom_text(
      size = 3,
      aes(label = round(mean_roc_auc, 2), y = mean_roc_auc + 0.08),
@@ -1006,12 +807,12 @@ model_comp %>%
 
 ## Choose model
 
-The best model seems to be Random Forest using TF-idf we also look at the second best model which is random forest using hash.
+The best model seems to be Random Forest using TF-idf we also look at the second best model which is the Logistic Regression model using TF-idf
 
 So we only continue with the two best ones. 
 
 
-### Random forest model with TF IDF
+### Log-reg model
 
 #### Performance metrics
 Show average performance over all folds: 
@@ -1020,10 +821,10 @@ Show average performance over all folds:
 rf_res_tf %>%  collect_metrics(summarize = TRUE)
 ```
 #### Collect model predictions
-To obtain the actual model predictions, we use the function collect_predictions and save the result as rf_pred_tf:
+To obtain the actual model predictions, we use the function collect_predictions and save the result as log_pred:
 
 ```{r}
-rf_pred_tf <- 
+log_pred_tf <- 
   rf_res_tf %>%
   collect_predictions()
 ```
@@ -1032,81 +833,34 @@ rf_pred_tf <-
 
 We can now use our collected predictions to make a confusion matrix
 ```{r}
-rf_pred_tf %>% 
+log_pred_tf %>% 
   conf_mat(y, .pred_class) 
 ```
 
 ```{r}
-rf_pred_tf %>% 
+log_pred_tf %>% 
   conf_mat(y, .pred_class) %>% 
   autoplot(type = "heatmap")
 ```
-We can see the model does okay predicting the correct classes. 
+We can see the model does okay predicting the correct genres. 
 
 #### ROC curve
 
 We will now create the ROC curve with 1 - specificity on the x-axis (false positive fraction = FP/(FP+TN)) and sensitivity on the y axis (true positive fraction = TP/(TP+FN)). 
 ```{r}
-rf_pred_tf %>% 
-  roc_curve(y,.pred_0) %>% 
+log_pred_tf %>% 
+  roc_curve(y, .pred_fear:.pred_trust) %>% 
   autoplot()
 ```
-
-
-
-### Random forest model hash
-
-#### Collect model predictions
-To obtain the actual model predictions, we use the function collect_predictions and save the result as rf_pred_hash:
-
-```{r}
-rf_pred_hash <- 
-  rf_res_hash %>%
-  collect_predictions()
-```
-
-#### Performance metrics
-Show average performance over all folds (note that we use rf_res):
-
-```{r}
-rf_res_hash %>%  collect_metrics(summarize = TRUE)
-```
-
-
-#### Confusion Matrix
-
-We can now use our collected predictions to make a confusion matrix
-```{r}
-rf_pred_hash %>% 
-  conf_mat(y, .pred_class) 
-```
-
-
-```{r}
-rf_pred_hash %>% 
-  conf_mat(y, .pred_class) %>% 
-  autoplot(type = "heatmap")
-```
-
-
-#### ROC curve
-
-We will now create the ROC curve with 1 - specificity on the x-axis (false positive fraction = FP/(FP+TN)) and sensitivity on the y axis (true positive fraction = TP/(TP+FN)). 
-```{r}
-rf_pred_hash %>% 
-  roc_curve(y, .pred_0) %>% 
-  autoplot()
-```
-
 ## Models on test data
 
 We now want to look at how the two models perform on test data. 
 
-### Random forest model TF IDF
+### Random forest model
 
 ```{r}
 last_fit_rf <- last_fit(workflow_rf_tf, 
-                        split = tidy_split,
+                        split = split,
                         metrics = metric_set(
                           recall, precision, f_meas, 
                           accuracy, kap,
@@ -1120,50 +874,19 @@ last_fit_rf %>%
   collect_metrics()
 ```
 
-We can again make a confusion matrix on the test data predictions
+WWe can again make a confusinmatrix on the testdata predictions
 
 ```{r}
 last_fit_rf %>%
   collect_predictions() %>% 
   conf_mat(y, .pred_class) %>% 
   autoplot(type = "heatmap")
+
 ```
 
 ```{r}
 last_fit_rf %>% 
   collect_predictions() %>% 
-  roc_curve(y, .pred_0) %>% 
-  autoplot()
-```
-
-### Random forest hash
-
-```{r}
-last_fit_rf_hash <- last_fit(workflow_rf_hash, 
-                        split = tidy_split,
-                        metrics = metric_set(
-                          recall, precision, f_meas, 
-                          accuracy, kap,
-                          roc_auc, sens, spec)
-                        )
-```
-
-
-```{r}
-last_fit_rf_hash %>% 
-  collect_metrics()
-```
-
-```{r}
-last_fit_rf_hash %>%
-  collect_predictions() %>% 
-  conf_mat(y, .pred_class) %>% 
-  autoplot(type = "heatmap")
-```
-
-```{r}
-last_fit_rf_hash %>% 
-  collect_predictions() %>% 
-  roc_curve(y, .pred_0) %>% 
+  roc_curve(y, .pred_fear:.pred_trust) %>% 
   autoplot()
 ```
